# eb-jepa-crafter

./: .gitignore  README.md  README_CRAFTER.md  pyproject.toml
eb_jepa/: action_encoders.py  jepa.py  losses.py
eb_jepa/datasets/: utils.py
eb_jepa/datasets/crafter/: crafter_dataset.py  data_config.yaml  normalizer.py
eval_results/: planning_results.json  planning_v2_composite.json  planning_v2_survival.json
eval_results/agent_evolution/: agent_evolution_results.json
eval_results/probe_spatial/: probe_spatial_results.json
eval_results/reward_head/: reward_head_results.json
examples/: launch_sbatch.py
examples/ac_video_jepa/: main.py
examples/ac_video_jepa/cfgs/: crafter.yaml
scripts/: collect_crafter_data.py  collect_ppo_data.py  compare_dreamerv2.py  eval_probe.py  eval_probe_spatial.py  eval_rollout.py  extract_training_curves.py  make_figures.py  online_loop.py  planning_agent.py  planning_agent_v2.py  run_all_evals.sh  setup_aarch64.sh  test_torch.sh  train_crafter.sh  train_reward_head.py  visualize_agent_evolution.py  visualize_learning.py  visualize_overlay.py
