[project]
name = "eb_jepa"
version = "0.1.1"
description = "Energy-Based JEPA"
authors = [
    {name = "Basile Terver", email = "basileterv@meta.com"},
    {name = "Randall Balestriero", email = "rbalestriero@meta.com"},
    {name = "Megi Dervishi", email = "megidervishi@meta.com"},
    {name = "David Fan", email = "davidfan@meta.com"},
    {name = "Quentin Garrido", email = "garridoq@meta.com"},
    {name = "Tushar Nagarajan", email = "tusharn@meta.com"},
    {name = "Koustuv Sinha", email = "koustuvs@meta.com"},
    {name = "Wancong Zhang", email = "wz1232@nyu.edu"},
    {name = "Mike Rabbat", email = "mikerabbat@meta.com"},
    # Equal contribution as senior authors
    {name = "Yann LeCun", email = "yann@meta.com"},
    {name = "Amir Bar", email = "amirbar@meta.com"},
]
dependencies = [
    "einops>=0.8.1",
    "fire>=0.7.0",
    "matplotlib",
    "opencv-python-headless",
    "scikit-learn",
    "torch>=2.6.0",
    "torchvision",
    "wandb",
    "imageio",
    "seaborn",
    "tqdm",
    "omegaconf",
    "ruamel.yaml",
    "numpy",
    "pandas",
    "crafter",
    "stable-baselines3>=2.3.0",
    "gymnasium",
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["eb_jepa*"]

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.4.1",
    "autoflake",
]
